Arreglo de bug usuario no pueda hacer varios pedidos y aumento de stock
